Adding the IPentahoCsrfService interface.

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -2771,6 +2771,11 @@
       <groupId>org.pentaho.csrf</groupId>
       <artifactId>csrf-client-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.pentaho.csrf</groupId>
+      <artifactId>csrf-pentaho-server-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
